// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.deployment;
option go_package = "github.com/chef/automate/api/interservice/deployment";

service CertificateAuthorityService {
	rpc GetRootCert(RootCertRequest) returns (RootCertResponse);
	rpc RegenerateRoot(RegenerateRootRequest) returns (RegenerateRootResponse);
}

message RootCertRequest{};
message RootCertResponse{
	string cert = 1;
}

message RegenerateRootRequest {}
message RegenerateRootResponse {}
